@@ -203,11 +203,8 @@
 /* other defines */
 #define MAXGENNUMERATOR          64000000    /**< determine maximal number of generators by dividing this number by the number of variables */
 #define COMPRESSNVARSLB             25000    /**< lower bound on the number of variables above which compression could be performed */
-#define DEFAULT_NAUTYMAXNCELLS     100000    /**< terminate symmetry detection using Nauty when number of cells in color refinment is at least this number
+#define DEFAULT_NAUTYMAXLEVEL        1000    /**< terminate symmetry detection using Nauty when depth level of Nauty's search tree exceeds this number
                                               *   (avoids segfaults due to Nauty for large graphs) */
-#define DEFAULT_NAUTYMAXNNODES   10000000    /**< terminate symmetry detection using Nauty when its search tree has at least this number of nodes */
-/*@todo investigate why the Nauty works well for some large instances (miplib2010/mspp16.mps) but not for PB instances (e.g., normalized-celar6-sub0_wcsp.wbo) */
-
 
 /* macros for getting activeness of symmetry handling methods */
 #define ISSYMRETOPESACTIVE(x)      (((unsigned) x & SYM_HANDLETYPE_SYMBREAK) != 0)
@@ -8399,14 +8396,9 @@ SCIP_RETCODE SCIPincludePropSymmetry(
    if ( strncmp(SYMsymmetryGetName(), "Nauty", 5) == 0 )
    {
       SCIP_CALL( SCIPaddIntParam(scip,
-            "propagating/" PROP_NAME "/nautymaxncells",
-            "terminate symmetry detection using Nauty when number of cells in color refinment is at least this number",
-            NULL, TRUE, DEFAULT_NAUTYMAXNCELLS, 0, INT_MAX, NULL, NULL) );
-
-      SCIP_CALL( SCIPaddIntParam(scip,
-            "propagating/" PROP_NAME "/nautymaxnnodes",
-            "terminate symmetry detection using Nauty when its search tree has at least this number of nodes",
-            NULL, TRUE, DEFAULT_NAUTYMAXNNODES, 0, INT_MAX, NULL, NULL) );
+            "propagating/" PROP_NAME "/nautymaxlevel",
+            "terminate symmetry detection using Nauty when depth level of Nauty's search tree exceeds this number (0: unlimited)",
+            NULL, TRUE, DEFAULT_NAUTYMAXLEVEL, 0, INT_MAX, NULL, NULL) );
    }
 
    /* possibly add description */
