@@ -441,6 +441,7 @@ Fixed bugs
 - recompute activity bounds before checking infeasibility and redundancy in linear constraint presolving
 - skip integer variables with fractional value in reference solution when finding additional variable fixings in ALNS heuristic
 - fix call of SCIPaddExprsViolScoreNonlinear() with constant expressions (no variables)
+- fixed memory issues for computing symmetries with Nauty for very large instances
 
 Build system
 ------------
@@ -452,6 +453,14 @@ Build system
 ### Makefile
 
 - added experimental target to run cppcheck
+
+### Changed Parameters
+
+- removed parameters propagating/symmetry/{nautymaxncells,nautymaxnnodes}
+
+### New Parameters
+
+- added parameter propagating/symmetry/maxlevel to terminate Nauty early if its search tree gets too deep
 
 Miscellaneous
 -------------
